Customized Smarty template elements for the blog section and previews, to utilize models

--- a/templates/blog/popups.html
+++ b/templates/blog/popups.html
@@ -1,58 +1,47 @@
-<section id="popup-blog-1" class="popup-window-container">
+{% load staticfiles %}
+{% for post in blog_posts %}
+<section id="popup-blog-{{ forloop.counter }}" class="popup-window-container">
     <div class="section-content">
         <div class="popup-window-closing-area"></div>
         <div class="container">
             <div class="popup-window">
-                <div class="popup-window-header popup-bg-img">
-                    <div class="popup-window-close"></div>
-                </div>
+
+                {# Subtemplate post_media #}
+                {% include 'blog/post_media.html' %}
 
                 <div class="popup-window-header">
                     <div class="popup-window-close"></div>
-                    <h2>Standart post</h2>
+                    <h2>{{ post.title }}</h2>
                 </div>
                 <div class="popup-window-detail">
                     <div class="left-detail">
-                        Date <span class="text-dark">23 October, 2014</span> <span class="delimiter-inline"></span> Posted By <a href="#">Admin</a> <span class="delimiter-inline"></span> Categories: <a href="#">Photo</a>, <a href="#">Other</a> <span class="delimiter-inline"></span> Comments: <a href="#">3</a>
+                        Published on <span class="text-dark">{{ post.date_published|date:"d F, Y" }}</span> <span class="delimiter-inline"></span> By <a href="#">{{ post.author }}</a> <span class="delimiter-inline"></span> In: <a href="#">{{ post.category }}</a>, <span class="delimiter-inline"></span> Comments: <a href="#">3</a>
                     </div>
                     <div class="right-detail">
                         Share:
                         <div class="detail-socials">
-                            <a href="#"><img alt="facebook" src="images/share/facebook.png"></a>
-                            <a href="#"><img alt="google plus" src="images/share/google_plus.png"></a>
-                            <a href="#"><img alt="twitter" src="images/share/twitter.png"></a>
-                            <a href="#"><img alt="pinterest" src="images/share/pinterest.png"></a>
+                            <a href="#"><img alt="facebook" src="{% static 'images/share/facebook.png' %}"></a>
+                            <a href="#"><img alt="google plus" src="{% static 'images/share/google_plus.png' %}"></a>
+                            <a href="#"><img alt="twitter" src="{% static 'images/share/twitter.png' %}"></a>
+                            <a href="#"><img alt="pinterest" src="{% static 'images/share/pinterest.png' %}"></a>
                         </div>
                     </div>
                 </div>
-                <img alt="image" src="images/blog/post2.jpg">
-                <div class="popup-window-content">
-                    <p class="first-letter">Dorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam <span class="text-highlight">nonummy nibh euismod</span> tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
-                    <p>Duis autem vel eum iriure <span class="text-dark"><u>dolor in hendrerit in vulputate velit esse molestie consequat</u></span>, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
-                    <div class="testimonial">
-                        “Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.”
-                        <div class="testimonial-author">John Doe</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <p class="no-top-margin">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore.</p>
-                        </div>
-                        <div class="col-md-6">
-                            <p class="no-top-margin">Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit <span class="text-highlight-bg">litterarum formas humanitatis</span> per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
-                        </div>
-                    </div>
-                </div>
+
+                {# Subtemplate post_full #}
+                {% include 'blog/post_body.html' %}
+
                 <div class="popup-window-detail">
                     <div class="left-detail">
-                        Tags: <a href="#">Blog</a>, <a href="#">Photo</a>, <a href="#">Photographer</a>, <a href="#">Freelance</a>, <a href="#">Themeforest</a>, <a href="#">Template</a>, <a href="#">Work</a>, <a href="#">Smarty</a>
+                        Tags: {% for tag in post.tags.all %}<a href="#">{{ tag }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}
                     </div>
                     <div class="right-detail">
                         Share:
                         <div class="detail-socials">
-                            <a href="#"><img alt="facebook" src="images/share/facebook.png"></a>
-                            <a href="#"><img alt="google plus" src="images/share/google_plus.png"></a>
-                            <a href="#"><img alt="twitter" src="images/share/twitter.png"></a>
-                            <a href="#"><img alt="pinterest" src="images/share/pinterest.png"></a>
+                            <a href="#"><img alt="facebook" src="{% static 'images/share/facebook.png' %}"></a>
+                            <a href="#"><img alt="google plus" src="{% static 'images/share/google_plus.png' %}"></a>
+                            <a href="#"><img alt="twitter" src="{% static 'images/share/twitter.png' %}"></a>
+                            <a href="#"><img alt="pinterest" src="{% static 'images/share/pinterest.png' %}"></a>
                         </div>
                     </div>
                 </div>
@@ -142,16 +131,13 @@
         </div><!-- .container -->
     </div><!-- .section-content -->
 </section><!-- #popup-blog-1 -->
-
+{% endfor %}
+{% comment %}
 <section id="popup-blog-2" class="popup-window-container">
     <div class="section-content">
         <div class="popup-window-closing-area"></div>
         <div class="container">
             <div class="popup-window">
-                <div class="popup-window-close popup-window-close-light"></div>
-                <div class="embed-responsive embed-responsive-4by3">
-                    <iframe class="embed-responsive-item" src="http://www.youtube.com/embed/rEk0AdJx9gw"></iframe>
-                </div>
                 <div class="popup-window-header">
                     <h2>Video post</h2>
                 </div>
@@ -206,13 +192,6 @@
         <div class="popup-window-closing-area"></div>
         <div class="container">
             <div class="popup-window">
-                <div class="popup-window-close popup-window-close-light"></div>
-                <div class="single-slider simple-arrows">
-                    <img alt="image" src="images/portfolio/4.jpg">
-                    <img alt="image" src="images/portfolio/3.jpg">
-                    <img alt="image" src="images/portfolio/2.jpg">
-                    <img alt="image" src="images/portfolio/1.jpg">
-                </div>
                 <div class="popup-window-header">
                     <h2>Gallery Post</h2>
                 </div>
@@ -263,16 +242,6 @@
         <div class="popup-window-closing-area"></div>
         <div class="container">
             <div class="popup-window">
-                <div class="popup-window-close popup-window-close-light"></div>
-                <div class="popup-window-single">
-                    <img alt="image" src="images/blog/post_audio.jpg">
-                    <div class="popup-window-single-container">
-                        <audio controls class="post-audio">
-                            <source src="music/audio.mp3" type="audio/mpeg">
-                            Your browser does not support the audio element.
-                        </audio>
-                    </div>
-                </div>
                 <div class="popup-window-header">
                     <h2>Audio post</h2>
                 </div>
@@ -304,18 +273,6 @@
         <div class="popup-window-closing-area"></div>
         <div class="container">
             <div class="popup-window">
-                <div class="popup-window-close popup-window-close-light"></div>
-                <div class="popup-window-single">
-                    <img alt="image" src="images/blog/post3.jpg">
-                    <div class="popup-window-single-container">
-                        <div class="popup-window-single-content">
-                            <div class="popup-window-single-inner">
-                                <p>“Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.”</p>
-                                <p class="popup-window-single-detail">&copy; John Doe</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="popup-window-header">
                     <h2>Quote format</h2>
                 </div>
@@ -346,17 +303,6 @@
         <div class="popup-window-closing-area"></div>
         <div class="container">
             <div class="popup-window">
-                <div class="popup-window-close popup-window-close-light"></div>
-                <div class="popup-window-single">
-                    <img alt="image" src="images/blog/post4.jpg">
-                    <div class="popup-window-single-container">
-                        <div class="popup-window-single-content">
-                            <div class="popup-window-single-inner">
-                                <p><a href="http://themeforest.net">http://themeforest.net</a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="popup-window-header">
                     <h2>Link format</h2>
                 </div>
@@ -381,3 +327,4 @@
         </div><!-- .container -->
     </div><!-- .section-content -->
 </section><!-- #popup-blog-6 -->
+{% endcomment %}
